--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="">
 <head>
     <meta charset="UTF-8"/>
@@ -452,3 +452,4 @@
 
 </body>
 </html>
+ -->
