--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <blocker style="position: absolute; bottom: 0px; height: 30px; width: 960px; background-image: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,1));"></blocker>
             <div class="resume">
                 <span>Download: &nbsp</span>
-                <a href="files/resume/Chongming Gao(高崇铭)-USTC-18064850580.pdf" target="_blank" title="English Resume：Chongming GAO (高崇铭)-USTC-18064850580" class="english">RESUME</a>
+                <a href="https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/%E4%B8%81%E6%96%AF%E6%98%8A-%E7%AE%80%E5%8E%86-20221021-P.pdf" target="_blank" title="Resume：Sihao Ding (丁斯昊)-USTC-13966688206" class="english">RESUME</a>
                 &nbsp/&nbsp
-                <a href="files/resume/高崇铭-中科大-18064850580.pdf" target="_blank" title="中文简历：丁斯昊-中科大-13966688206" class="chinese">中文简历</a>
+                <a href="https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/%E4%B8%81%E6%96%AF%E6%98%8A-%E7%AE%80%E5%8E%86-20221021-P.pdf" target="_blank" title="中文简历：丁斯昊-中科大-13966688206" class="chinese">中文简历</a>
             </div>
         </section>
 
