--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
     <link rel="alternate" href="/default" title="Sihao Ding (丁斯昊)'s Homepage">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./logo/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script>
@@ -45,7 +45,7 @@
                 <span>Download: &nbsp</span>
                 <a href="./Resume/丁斯昊-简历-20221021-P.pdf" target="_blank" title="Resume：Sihao Ding (丁斯昊)-USTC-13966688206" class="english">RESUME</a>
                 &nbsp/&nbsp
-                <a href="https://github.com/SihaoDing/SihaoDing.github.io/blob/main/Resume/%E4%B8%81%E6%96%AF%E6%98%8A-%E7%AE%80%E5%8E%86-20221021-P.pdf" target="_blank" title="中文简历：丁斯昊-中科大-13966688206" class="chinese">中文简历</a>
+                <a href="/Resume/丁斯昊-简历-20221021-P.pdf" target="_blank" title="中文简历：丁斯昊-中科大-13966688206" class="chinese">中文简历</a>
             </div>
         </section>
 
