--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <body>
     <main class="container">
         <section class="home-page">
+            <td class="background" valign="CENTER">
+                <img alt="" src="./Resume/profile.jpg" style="margin-left:9px;margin-top:2px;width:440px">
+            </td>
             <div class="basic-info">
                 <name><span></span>  Sihao Ding 丁斯昊</name>
                 <p>Ph.D. candidate at University of Science and Technology of China <a href="http://en.ustc.edu.cn/" target="_blank">(USTC)</a>.</p>
@@ -209,7 +212,7 @@
                     <div class="pub_title">Addressing Unmeasured Confounder for Recommendation with Sensitivity Analysis</div>
                     <div class="pub_authors"><u>Sihao Ding</u>, Peng Wu, Fuli Feng, Yitong Wang, Xiangnan He, Yong Liao, Yongdong Zhang</div>
                     <div class="pub_type">
-                        <span class="label label-default">SIGKDD '22</span>
+                        <span class="label label-default">KDD '22</span>
                         <!-- <i>Preprint.</i> -->
                     </div>
                     <div class="pub_downloads">
