--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body>
     <main class="container">
         <section class="home-page">
-            <td class="background" valign="CENTER">
+<!--             <td class="background" valign="CENTER">
                 <img alt="" src="./Resume/profile.jpg" style="margin-left:9px;margin-top:2px;width:440px">
-            </td>
+            </td> -->
             <div class="basic-info">
                 <name><span></span>  Sihao Ding 丁斯昊</name>
                 <p>Ph.D. candidate at University of Science and Technology of China <a href="http://en.ustc.edu.cn/" target="_blank">(USTC)</a>.</p>
