--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
     <link rel="alternate" href="/default" title="Sihao Ding (丁斯昊)'s Homepage">
-    <link rel="shortcut icon" type="image/x-icon" href="./logo/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./logo/favicon.png" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script>
