--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <blocker style="position: absolute; bottom: 0px; height: 30px; width: 960px; background-image: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,1));"></blocker>
             <div class="resume">
                 <span>Download: &nbsp</span>
-                <a href="./Resume/丁SihaoDIng(丁斯昊)-resume-13966688206.pdf" target="_blank" title="Resume：Sihao Ding (丁斯昊)-USTC-13966688206" class="english">RESUME</a>
+                <a href="./Resume/SihaoDIng(丁斯昊)-resume-13966688206.pdf" target="_blank" title="Resume：Sihao Ding (丁斯昊)-USTC-13966688206" class="english">RESUME</a>
                 &nbsp/&nbsp
                 <a href="/Resume/SihaoDIng(丁斯昊)-resume-13966688206.pdf" target="_blank" title="中文简历：丁斯昊-中科大-13966688206" class="chinese">中文简历</a>
             </div>
