--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <p>Data mining, Recommender system,</p>
                 <p>Causal inference, and Graph learning.</p>
                 <p><br/></p>
+                <a href="mailto:dnumberfour4@gmail.com" class="iconfont icon-email" title="">
+                  <span>dnumberfour4@gmail.com</span>
+                </a>
                 <a href="mailto:dsihao@mail.ustc.edu.cn" class="iconfont icon-email" title="">
                   <span>dsihao@mail.ustc.edu.cn</span>
                 </a>
