--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <td class="des"  halign="LEFT">
                     <div class="name">University of Science and Technology of China (USTC)</div>
-                    <div class="date">2018.09 - now   <B><I>  Ph.D. candidate </I></B></div>
+                    <div class="date">2018.09 - 2023.06   <B><I>  Ph.D. </I></B></div>
                     <div class="info"> School of Information Science and Technology & School of Cyber Science and Technology. </div>
                     <div class="advisor">Advisor: <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He (何向南) </a> & <a href="https://fulifeng.github.io/" target="_blank">Fuli Feng (冯福利)</a>. </div>
                     <div class="advisor">Mentor: <a href="https://baike.baidu.com/item/%E5%90%B4%E6%9B%BC%E9%9D%92/42143?fr=aladdin" target="_blank">Manqing Wu (吴曼青) </a> & <a href="https://baike.baidu.com/item/%E5%BC%A0%E5%8B%87%E4%B8%9C/8056718?fr=aladdin" target="_blank">Yongdong Zhang (张勇东)</a>. </div>
