--- a/index.html
+++ b/index.html
@@ -178,6 +178,24 @@
             <h1><span>Research</span></h1>
             <paper>
                 <img src="./paper/CIGC1.png"style="width:260px">
+                <!-- <img src="./paper/IGF.png"style="width:100px"> -->
+                <div class="des">
+                    <div class="pub_title">Fairly Recommending with Social Attributes: A Flexible and Controllable Optimization Approach</div>
+                    <div class="pub_authors">Jinqiu Jin, Haoxuan Li, Fuli Feng, <u>Sihao Ding</u>, Peng Wu, Xiangnan</div>
+                    <div class="pub_type">
+                        <span class="label label-default">NeurIPS '23</span>
+                    <!-- <i>Under Review.</i> -->
+                    </div>
+                    <div class="pub_downloads">
+                        Download:
+                        [<a href="https://arxiv.org/pdf/2108.06889.pdf" target="_blank">PDF</a>]
+                        <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
+                        <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
+                    </div>                
+                </div>
+            </paper>
+            <paper>
+                <img src="./paper/CIGC1.png"style="width:260px">
                 <!-- <img src="./paper/CIGC2.png"style="width:100px"> -->
                 <div class="des">
                     <div class="pub_title">Causal Incremental Graph Convolution for Recommender System Retraining</div>
