--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="pub_downloads">
                         Download:
-                        [<a href="https://arxiv.org/pdf/2108.06889.pdf" target="_blank">PDF</a>]
+                        [<a href="https://openreview.net/group?id=NeurIPS.cc/2023/Conference&referrer=%5BHomepage%5D(%2F)" target="_blank">PDF</a>]
                         <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
                         <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
                     </div>                
