--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <section class="research">
             <h1><span>Research</span></h1>
             <paper>
-                <img src="./paper/CIGC1.png"style="width:260px">
+                <img src="./paper/SOFA.png"style="width:260px">
                 <!-- <img src="./paper/IGF.png"style="width:100px"> -->
                 <div class="des">
                     <div class="pub_title">Fairly Recommending with Social Attributes: A Flexible and Controllable Optimization Approach</div>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="pub_downloads">
                         Download:
-                        [<a href="https://openreview.net/group?id=NeurIPS.cc/2023/Conference&referrer=%5BHomepage%5D(%2F)" target="_blank">PDF</a>]
+                        [<a href="https://proceedings.neurips.cc/paper_files/paper/2023/file/436d042b2dd81214d23ae43eb196b146-Paper-Conference.pdf" target="_blank">PDF</a>]
                         <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
                         <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
                     </div>                
