--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </td> -->
             <div class="basic-info">
                 <name><span></span>  Sihao Ding 丁斯昊</name>
-                <p>Recommendation algorithm engineer at TikTok <a href="https://www.bytedance.com/en/" target="_blank"></a>.</p>
+                <p>Recommendation Algorithm Engineer at ByteDance <a href="https://www.bytedance.com/en/" target="_blank">(TikTok)</a>.</p>
                 <p>Ph.D. at University of Science and Technology of China <a href="http://en.ustc.edu.cn/" target="_blank">(USTC)</a>.</p>
                 <!-- <p>Mentor: <a href="https://baike.baidu.com/item/%E5%90%B4%E6%9B%BC%E9%9D%92/42143?fr=aladdin" target="_blank">Manqing Wu (吴曼青) </a> & <a href="https://baike.baidu.com/item/%E5%BC%A0%E5%8B%87%E4%B8%9C/8056718?fr=aladdin" target="_blank">Yongdong Zhang (张勇东)</a>.</p> -->
                 <p>Advisor: <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He (何向南) </a> & <a href="https://fulifeng.github.io/" target="_blank">Fuli Feng (冯福利)</a>.</p>
