--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
         <section class="research">
             <h1><span>Research</span></h1>
             <paper>
+                <img src="./paper/www24.png"style="width:260px">
+                <div class="des">
+                    <div class="pub_title">Understanding and Counteracting Feature-Level Bias in Click-Through Rate Prediction
+                    <div class="pub_authors">Jinqiu Jin, <u>Sihao Ding</u>, Wenjie Wang, Fuli Feng</div>
+                    <div class="pub_type">
+                        <span class="label label-default">WWW '24</span>
+                    <!-- <i>Under Review.</i> -->
+                    </div>
+                    <div class="pub_downloads">
+                        Download:
+                        [<a href="https://arxiv.org/pdf/2402.03600.pdf" target="_blank">PDF</a>]
+                        <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
+                        <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
+                    </div>                
+                </div>
+            </paper>
+            <paper>
                 <img src="./paper/NEIGH.png"style="width:260px">
                 <div class="des">
                     <div class="pub_title">Be Aware of the Neighborhood Effect: Modeling Selection Bias under Interference for Recommendation
