--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <section class="research">
             <h1><span>Research</span></h1>
             <paper>
-                <img src="./paper/www24.png"style="width:260px">
+                <img src="./paper/www24.jpg"style="width:260px">
                 <div class="des">
                     <div class="pub_title">Understanding and Counteracting Feature-Level Bias in Click-Through Rate Prediction
                     <div class="pub_authors">Jinqiu Jin, <u>Sihao Ding</u>, Wenjie Wang, Fuli Feng</div>
