--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <paper>
                 <img src="./paper/www24.jpg"style="width:260px">
                 <div class="des">
-                    <div class="pub_title">Understanding and Counteracting Feature-Level Bias in Click-Through Rate Prediction
+                    <div class="pub_title">Understanding and Counteracting Feature-Level Bias in Click-Through Rate Prediction </div>
                     <div class="pub_authors">Jinqiu Jin, <u>Sihao Ding</u>, Wenjie Wang, Fuli Feng</div>
                     <div class="pub_type">
                         <span class="label label-default">WWW '24</span>
