--- a/index.html
+++ b/index.html
@@ -56,127 +56,58 @@
             </div>
         </section>
 
-        <section class="experiences">
-            <h1><span>Education</span></h1>
-            <table class="education" style="background-color:white;">
-                <tbody>
-                <tr>
-                <td class="logo" valign="CENTER">
-                    <img alt="" src="https://cdn.chongminggao.top/logo/ustc-logo.png" style="width:105px">
-                </td>
-
-                <td class="middle" valign="CENTER">
-                </td>
-
-                <td class="des"  halign="LEFT">
-                    <div class="name">University of Science and Technology of China (USTC)</div>
-                    <div class="date">2018.09 - 2023.06  </div>
-                    <div class="info"> School of Information Science and Technology & School of Cyber Science and Technology. </div>
-                    <div class="advisor">Advisor: <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He (何向南) </a> & <a href="https://fulifeng.github.io/" target="_blank">Fuli Feng (冯福利)</a>. </div>
-                    <div class="advisor">Mentor: <a href="https://baike.baidu.com/item/%E5%90%B4%E6%9B%BC%E9%9D%92/42143?fr=aladdin" target="_blank">Manqing Wu (吴曼青) </a> & <a href="https://baike.baidu.com/item/%E5%BC%A0%E5%8B%87%E4%B8%9C/8056718?fr=aladdin" target="_blank">Yongdong Zhang (张勇东)</a>. </div>
-                    <div class="result">Research topics: Recommender systems, Causal inference, Graph learning. </div>
-                </td>
-                </tr>
-
-
-
-                <tr>
-                <td class="logo" valign="CENTER">
-                    <img alt="" src="./logo/XIDIAN.png" style="width:105px">
-                    <!-- <img alt="" src="https://cdn.chongminggao.top/logo/uestc-logo.png" style="width:105px"> -->
-                </td>
-
-                <td class="middle" valign="CENTER">
-                </td>
-
-                <td class="des" valign="CENTER" halign="LEFT">
-                    <div class="name">XIDIAN University (XIDIAN)</div>
-                    <div class="date">2014.09 - 2018.07</div>
-                    <div class="info"> <B><I>B.Eng.</I></B> in School of Electronic Engineering. GPA: 4.0 (92/100), Ranking: Top 5%</div>
-                    <div class="result">Thesis: Micro-expression recognition based on deep learning. </div>
-                </td>
-                </tr>
-                </tbody>
-            </table>
-
-<!--             <h1><span>Industry Experiences</span></h1>
-            <table class="internship" >
-                <tbody>
-                <tr>
-                    <td class="logo" valign="CENTER">
-                        <img alt="" src="https://cdn.chongminggao.top/logo/kuaishou-logo.png" style="width:70px">
-                    </td>
-                    <td class="middle" valign="CENTER">
-                    </td>
-                    
-                    <td class="des"  halign="LEFT">
-                        <div class="name">Kuaishou 快手</div>
-                        <div class="date">2020.09 – Now</div>
-                        <div class="info"> Research Intern 研究实习生 </div>
-                        <div class="advisor">Advisor: 江鹏, 何向南. </div>
-                        <div class="result">Research topics: Interactive/Conversational recommender system. </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="logo" valign="CENTER">
-                        <img alt="" src="https://cdn.chongminggao.top/logo/alibaba-logo.png" style="width:200px">
-                    </td>
-                    <td class="middle" valign="CENTER">
-                    </td>
-                    <td class="des"  halign="LEFT">
-                        <div class="name">Alibaba 阿里巴巴</div>
-                        <div class="date">2019.03 – 2019.09</div>
-                        <div class="info"> Research Intern 研究实习生. </div>
-                        <div class="advisor">Advisor: 王浩, 聂再清. </div>
-                        <div class="result">Research topics: Shared-account-aware recommender system. </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </section> -->
-
-<!--         <section class="tutorial">
-            <h1><span>Tutorial</span></h1>
-            <paper  id='last'>
-                <img src="https://cdn.chongminggao.top/image/recsys21-tutorial.png">
-                <div class="des">
-                    <div class="pub_title">RecSys 2021 Tutorial on Conversational Recommendation: Formulation, Methods, and Evaluation</div>
-                    <div class="pub_authors">Wenqiang Lei, <u>Chongming Gao</u>, Maarten de Rijke</div>
-                    <div class="pub_type">
-                        <I>RecSys 2021 Tutorial</I>.
-                    </div>
-                    <div class="pub_downloads">
-                        Download:
-                        [<a href="https://cdn.chongminggao.top/files/pdf/recsys2021-tutorial_CRS_compressed.pdf" target="_blank">Slides</a> (3 hours)]
-                        | <span class="pub_highlight">Tutorial</span> 
-                    </div>                
-                </div>
-            </paper>
-        </section>
-
-        <section class="datasets">
-            <h1><span>Resource Paper</span></h1>
-            <paper id='last'>
-                <img src="https://cdn.chongminggao.top/image/kuairec.png">
-                <div class="des">
-                    <div class="pub_title">KuaiRec: A Fully-observed Dataset for Recommender Systems (Density: Almost 100%)</div>
-                    <div class="pub_authors"><u>Chongming Gao</u>, Shijun Li, Wenqiang Lei, Biao Li, Peng Jiang, Jiawei Chen, Xiangnan He, Jiaxin Mao, Tat-Seng Chua</div>
-                    <div class="pub_type">
-                        <I>Resource Paper</I>. | <span class="pub_highlight">Dataset</span> 
-                    </div>
-                    <div class="pub_downloads">
-                        Download:
-                        [<a href="https://arxiv.org/pdf/2202.10842.pdf" target="_blank">PDF</a>]
-                        [<a href="https://chongminggao.github.io/KuaiRec/" target="_blank">Webpage</a>]
-                        [<a href="https://colab.research.google.com/github/chongminggao/KuaiRec/blob/main/Statistcs_KuaiRec.ipynb" target="_blank">Statistics</a>]
-                        [<a href="https://github.com/xiwenchao/fully_observed_demo" target="_blank">Demo</a>]
-                    </div>                
-                </div>
-            </paper>
-        </section> -->
 
         <section class="research">
             <h1><span>Research</span></h1>
+            <paper>
+                <img src="./paper/ID.png"style="width:260px">
+                <div class="des">
+                    <div class="pub_title">Interpolative Distillation for Unifying Biased and Debiased Recommendation</div>
+                    <div class="pub_authors"><u>Sihao Ding</u>, Fuli Feng, Xiangnan He, Jinqiu Jin, Wenjie Wang, Yong Liao, Yongdong Zhang</div>
+                    <div class="pub_type">
+                        <span class="label label-default">SIGIR '22</span>
+                        <!-- <i>Preprint.</i> -->
+                    </div>
+                    <div class="pub_downloads">
+                        Download:
+                        [<a href="https://dl.acm.org/doi/10.1145/3477495.3532002" target="_blank">PDF</a>]
+                    </div>                
+                </div>
+            </paper>
+            <paper>
+                <img src="./paper/RD.png"style="width:260px">
+                <div class="des">
+                    <div class="pub_title">Addressing Unmeasured Confounder for Recommendation with Sensitivity Analysis</div>
+                    <div class="pub_authors"><u>Sihao Ding</u>, Peng Wu, Fuli Feng, Yitong Wang, Xiangnan He, Yong Liao, Yongdong Zhang</div>
+                    <div class="pub_type">
+                        <span class="label label-default">KDD '22</span>
+                        <!-- <i>Preprint.</i> -->
+                    </div>
+                    <div class="pub_downloads">
+                        Download:
+                        [<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539240" target="_blank">PDF</a>]
+                        <!-- | <span class="pub_highlight">Survey</span>  -->
+                    </div>                
+                </div>
+            </paper>
+            <paper>
+                <img src="./paper/CIGC1.png"style="width:260px">
+                <!-- <img src="./paper/CIGC2.png"style="width:100px"> -->
+                <div class="des">
+                    <div class="pub_title">Causal Incremental Graph Convolution for Recommender System Retraining</div>
+                    <div class="pub_authors"><u>Sihao Ding</u>, Fuli Feng, Xiangnan He, Yong Liao, Jun Shi, Yongdong Zhang</div>
+                    <div class="pub_type">
+                        <span class="label label-default">IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</span>
+                    <!-- <i>Under Review.</i> -->
+                    </div>
+                    <div class="pub_downloads">
+                        Download:
+                        [<a href="https://arxiv.org/pdf/2108.06889.pdf" target="_blank">PDF</a>]
+                        <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
+                        <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
+                    </div>                
+                </div>
+            </paper>
             <paper>
                 <img src="./paper/www24.jpg"style="width:260px">
                 <div class="des">
@@ -189,8 +120,6 @@
                     <div class="pub_downloads">
                         Download:
                         [<a href="https://arxiv.org/pdf/2402.03600.pdf" target="_blank">PDF</a>]
-                        <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
-                        <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
                     </div>                
                 </div>
             </paper>
@@ -230,55 +159,50 @@
                     </div>                
                 </div>
             </paper>
-            <paper>
-                <img src="./paper/CIGC1.png"style="width:260px">
-                <!-- <img src="./paper/CIGC2.png"style="width:100px"> -->
-                <div class="des">
-                    <div class="pub_title">Causal Incremental Graph Convolution for Recommender System Retraining</div>
-                    <div class="pub_authors"><u>Sihao Ding</u>, Fuli Feng, Xiangnan He, Yong Liao, Jun Shi, Yongdong Zhang</div>
-                    <div class="pub_type">
-                        <span class="label label-default">IEEE Transactions on Neural Networks and Learning Systems (TNNLS)</span>
-                    <!-- <i>Under Review.</i> -->
-                    </div>
-                    <div class="pub_downloads">
-                        Download:
-                        [<a href="https://arxiv.org/pdf/2108.06889.pdf" target="_blank">PDF</a>]
-                        <!-- [<a href="https://cdn.chongminggao.top/files/pdf/CIRS-slides.pdf" target="_blank">Slides</a>] -->
-                        <!-- [<a href="https://github.com/chongminggao/CIRS-codes" target="_blank">Code</a>] -->
-                    </div>                
-                </div>
-            </paper>
-            <paper>
-                <img src="./paper/ID.png"style="width:260px">
-                <div class="des">
-                    <div class="pub_title">Interpolative Distillation for Unifying Biased and Debiased Recommendation</div>
-                    <div class="pub_authors"><u>Sihao Ding</u>, Fuli Feng, Xiangnan He, Jinqiu Jin, Wenjie Wang, Yong Liao, Yongdong Zhang</div>
-                    <div class="pub_type">
-                        <span class="label label-default">SIGIR '22</span>
-                        <!-- <i>Preprint.</i> -->
-                    </div>
-                    <div class="pub_downloads">
-                        Download:
-                        [<a href="https://dl.acm.org/doi/10.1145/3477495.3532002" target="_blank">PDF</a>]
-                    </div>                
-                </div>
-            </paper>
-            <paper>
-                <img src="./paper/RD.png"style="width:260px">
-                <div class="des">
-                    <div class="pub_title">Addressing Unmeasured Confounder for Recommendation with Sensitivity Analysis</div>
-                    <div class="pub_authors"><u>Sihao Ding</u>, Peng Wu, Fuli Feng, Yitong Wang, Xiangnan He, Yong Liao, Yongdong Zhang</div>
-                    <div class="pub_type">
-                        <span class="label label-default">KDD '22</span>
-                        <!-- <i>Preprint.</i> -->
-                    </div>
-                    <div class="pub_downloads">
-                        Download:
-                        [<a href="https://dl.acm.org/doi/abs/10.1145/3534678.3539240" target="_blank">PDF</a>]
-                        <!-- | <span class="pub_highlight">Survey</span>  -->
-                    </div>                
-                </div>
-            </paper>
+
+        <section class="experiences">
+            <h1><span>Education</span></h1>
+            <table class="education" style="background-color:white;">
+                <tbody>
+                <tr>
+                <td class="logo" valign="CENTER">
+                    <img alt="" src="https://cdn.chongminggao.top/logo/ustc-logo.png" style="width:105px">
+                </td>
+
+                <td class="middle" valign="CENTER">
+                </td>
+
+                <td class="des"  halign="LEFT">
+                    <div class="name">University of Science and Technology of China (USTC)</div>
+                    <div class="date">2018.09 - 2023.06  </div>
+                    <div class="info"> School of Information Science and Technology & School of Cyber Science and Technology. </div>
+                    <div class="advisor">Advisor: <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Xiangnan He (何向南) </a> & <a href="https://fulifeng.github.io/" target="_blank">Fuli Feng (冯福利)</a>. </div>
+                    <div class="advisor">Mentor: <a href="https://baike.baidu.com/item/%E5%90%B4%E6%9B%BC%E9%9D%92/42143?fr=aladdin" target="_blank">Manqing Wu (吴曼青) </a> & <a href="https://baike.baidu.com/item/%E5%BC%A0%E5%8B%87%E4%B8%9C/8056718?fr=aladdin" target="_blank">Yongdong Zhang (张勇东)</a>. </div>
+                    <div class="result">Research topics: Recommender systems, Causal inference, Graph learning. </div>
+                    <div class="result">Thesis: 因果增强的去偏推荐方法研究 </div>
+                </td>
+                </tr>
+
+
+
+                <tr>
+                <td class="logo" valign="CENTER">
+                    <img alt="" src="./logo/XIDIAN.png" style="width:105px">
+                    <!-- <img alt="" src="https://cdn.chongminggao.top/logo/uestc-logo.png" style="width:105px"> -->
+                </td>
+
+                <td class="middle" valign="CENTER">
+                </td>
+
+                <td class="des" valign="CENTER" halign="LEFT">
+                    <div class="name">XIDIAN University (XIDIAN)</div>
+                    <div class="date">2014.09 - 2018.07</div>
+                    <div class="info"> <B><I>B.Eng.</I></B> in School of Electronic Engineering. GPA: 4.0 (92/100), Ranking: Top-5% tire</div>
+                    <div class="result">Thesis: Micro-expression recognition based on deep learning. </div>
+                </td>
+                </tr>
+                </tbody>
+            </table>
 
         <section class="award" id="last">
         <h1><span>Awards & Honors</span></h1>
